// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OrdersNewPageComponent should not render the template when the VM is not provided 1`] = `
<div
  id="root0"
  ng-version="20.1.7"
>
  <!--container-->
</div>
`;

exports[`OrdersNewPageComponent should render the template when the VM is provided 1`] = `
<div
  id="root1"
  ng-version="20.1.7"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <!--container-->
    </section>
  </app-page-layout>
  <!--container-->
</div>
`;
